Some Restructuring, Added Mapper 001.

--- a/NesEmulator/NesEmulator.csproj
+++ b/NesEmulator/NesEmulator.csproj
@@ -76,16 +76,21 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GameEngine.cs" />
+    <Compile Include="Nes\Cartridge.cs" />
     <Compile Include="Nes\Cpu.cs" />
     <Compile Include="Nes\AddressModes.cs" />
     <Compile Include="Nes\Bus\DataBus.cs" />
+    <Compile Include="Nes\I2A03.cs" />
     <Compile Include="Nes\I6502.cs" />
     <Compile Include="Nes\Bus\IBusInterface.cs" />
+    <Compile Include="Nes\INesHeader.cs" />
     <Compile Include="Nes\Instruction.cs" />
     <Compile Include="Nes\InstructionSet.cs" />
+    <Compile Include="Nes\Mapper\IMapper.cs" />
+    <Compile Include="Nes\Mapper\Mapper001.cs" />
     <Compile Include="Nes\Memory\MirroredRam.cs" />
     <Compile Include="Nes\Memory\Ram.cs" />
-    <Compile Include="Nes\Memory\Rom.cs" />
+    <Compile Include="Nes\Ppu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Nes\Core.cs" />
